Bugfix: Changed font family for vertical alignment of social network icon

--- a/Blablacar/static/css/style.css
+++ b/Blablacar/static/css/style.css
@@ -1,6 +1,10 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+body {
+    font-family: "Raleway", sans-serif;
+}
+
 .content {
     margin: 1.5rem 0;
 }
